--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 @font-face {
   font-family: "Sora";
   src: url("../fonts/Sora.ttf") format("truetype");
